                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 06-06-2004 updated: Hungarian language file (Thnx to tcsizmadia)
 - 06-06-2005 fixed: mplayer may crash when playback ends (updated again)
 - 06-06-2005 fixed: item is highlighted as playing when the start of a song fails
 - 06-06-2005 fixed: .cue sheets would loop indefinitely on the last two tracks.
 - 06-06-2005 fixed: Source of the below crash (urlset out of range in rsscontrol), + updated PM3 to suit the new system.
 - 06-06-2005 fixed: added missing !--> to the rss comments in Xboxmediacenter.xml (fixes serious crash)
 - 06-06-2005 fixed: some legal fat-x chars were not in the list - thanks to yoci!
 - 06-06-2005 changed: moved rss specifications to xboxmediacenter.xml and added url sets.
 - 06-06-2005 changed: removed libmp4 linkage. reduces xbe with ~ 110kb
 - 06-06-2005 added: sf.net patch [1215111] Fast AAC/MP4 tag retrieval - thanks to arnie pie!
 - 05-06-2005 changed: Cleaned up use of CUtil::cmpnocase, replacing with strcmpi throughout.
 - 05-06-2005 added: Combined spectrums into a single .vis with presets, changeable on the fly.
 - 05-06-2005 fixed: dvdplayer would fail to play from scrambled disc untill mplayer had once played it
 - 05-06-2005 fixed: XBMC would sometimes lockup during FF/RW when using Hardware Overlays
 - 05-06-2005 added: Write to log when memory allocation failes in a dll
 - 05-06-2005 fixed: memory overrun when reading EEPROM (not as bad as it sounds). HalReadSMBusValue() allways touched 4bytes on each call.
 - 05-06-2005 added: Faster path lookups in CFileItemList (for DirectoryCache mainly) thanks to desertbear.
 - 05-05-2005 fixed: minor crash fix when switching between gui and fullscreen