@@ -74,7 +74,7 @@ int CFileHD::Stat(const CURL& url, struct __stat64* buffer)
 
 
 //*********************************************************************************************
-bool CFileHD::OpenForWrite(const CURL& url, bool bBinary)
+bool CFileHD::OpenForWrite(const CURL& url, bool bBinary, bool bOverWrite)
 {
   // make sure it's a legal FATX filename (we are writing to the harddisk)
   CStdString strFileNameAndPath, strPath, strFileName;
@@ -86,7 +86,7 @@ bool CFileHD::OpenForWrite(const CURL& url, bool bBinary)
   strPath += strNewFile;
   strPath.Replace("/", "\\");
 
-  m_hFile.attach(CreateFile(strPath.c_str(), GENERIC_READ | GENERIC_WRITE, FILE_SHARE_READ, NULL, OPEN_ALWAYS, FILE_ATTRIBUTE_NORMAL, NULL));
+  m_hFile.attach(CreateFile(strPath.c_str(), GENERIC_READ | GENERIC_WRITE, FILE_SHARE_READ, NULL, bOverWrite ? CREATE_ALWAYS : OPEN_ALWAYS, FILE_ATTRIBUTE_NORMAL, NULL));
   if (!m_hFile.isValid()) return false;
 
   m_i64FilePos = 0;
