@@ -32,7 +32,7 @@ public:
   virtual void Close();
   virtual void Flush();
 
-  virtual bool OpenForWrite(const CURL& url, bool bBinary = true);
+  virtual bool OpenForWrite(const CURL& url, bool bBinary = true, bool bOverWrite = false);
   unsigned int Write(void *lpBuf, __int64 uiBufSize);
 
   virtual bool Delete(const char* strFileName);
